Fix entry menu icon color on mobile

--- a/client/style.css
+++ b/client/style.css
@@ -604,8 +604,7 @@ html:not(.mobile) #entry-menu a.active {
     background: #16b;
     color: #fff;
 }
-
-#entry-menu a:hover svg {
+html:not(.mobile) #entry-menu a:hover svg {
    fill: #fff;
 }
 
